[gd_scene load_steps=7 format=3 uid="uid://dv4g57qgdfg33"]

[ext_resource type="Script" uid="uid://chlk3v2pashqe" path="res://Games/fruit_catcher/Scenes/Game/game.gd" id="1_ln2h6"]
[ext_resource type="PackedScene" uid="uid://dqhaj3fx1ah8r" path="res://Games/fruit_catcher/Scenes/Paddle/paddle.tscn" id="2_gwu2e"]
[ext_resource type="Texture2D" uid="uid://d04q4wfpcqudk" path="res://Games/fruit_catcher/assets/vecteezy_deep-forest-scene-with-trees-cartoon-background-vector_9577135-1.jpg" id="2_y3kpf"]
[ext_resource type="AudioStream" uid="uid://c6b4darsin5cb" path="res://Games/fruit_catcher/assets/bgm_action_5.mp3" id="4_ln2h6"]
[ext_resource type="AudioStream" uid="uid://nunov43qa4b0" path="res://Games/fruit_catcher/assets/spell1_0.wav" id="5_y3kpf"]
[ext_resource type="FontFile" uid="uid://bnbrhy3ui4hcs" path="res://Games/Jumpify/art/ui/fonts/Bungee-Regular.ttf" id="6_do66n"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ln2h6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(575, 324.5)
scale = Vector2(0.598958, 0.571555)
texture = ExtResource("2_y3kpf")

[node name="Paddle" parent="." instance=ExtResource("2_gwu2e")]
position = Vector2(549, 620)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ln2h6")
volume_db = -15.0
autoplay = true

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_y3kpf")
volume_db = -11.0

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 5.0
offset_top = 10.0
offset_right = 178.0
offset_bottom = 74.0
theme_override_colors/font_color = Color(0, 0.819608, 0, 1)
theme_override_colors/font_shadow_color = Color(0.60933, 0.60933, 0.60933, 0.513726)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("6_do66n")
theme_override_font_sizes/font_size = 30

[node name="DarkOverlay" type="ColorRect" parent="."]
visible = false
offset_left = -110.0
offset_top = -46.0
offset_right = 1198.0
offset_bottom = 678.0
color = Color(0, 0, 0, 0.513726)

[node name="GameOverLabel" type="Label" parent="."]
visible = false
offset_left = 159.0
offset_top = 224.0
offset_right = 973.0
offset_bottom = 429.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 150
text = "Game Over"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 12.0
offset_top = 582.0
offset_right = 161.0
offset_bottom = 636.0
theme_override_fonts/font = ExtResource("6_do66n")
theme_override_font_sizes/font_size = 20
text = "⬅️ logout
"

[node name="CheckButton" type="CheckButton" parent="."]
offset_left = 461.0
offset_top = -1.0
offset_right = 645.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("6_do66n")
theme_override_font_sizes/font_size = 20
text = "ADAPT PROM"

[connection signal="area_entered" from="Paddle" to="." method="_on_paddle_area_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_logout_button_pressed"]
